# tournament-discord-bot

./: .flake8  .gitignore  Dockerfile  Makefile  README.md  backup_job.sh  config.dist.ini  config.py  main.py  pyproject.toml
backends/discord/: discord.plug  discord.py
clients/: toornament_api_client.py
plugins/toornament/: tournament.plug  tournament.py
plugins/tournament_manager/: tournament_manager.plug  tournament_manager.py
plugins/tournament_manager/clients/: toornament_api_client.py
plugins/tournament_manager/decorators/: __init__.py  private_message_only.py  tournament_admin_only.py  tournament_channel_only.py
plugins/tournament_manager/models/: __init__.py  _base.py  match.py  player.py  score_submission.py  team.py  toornament_info.py  tournament.py
plugins/tournament_manager/services/: errors.py  match_service.py  tournament_service.py
plugins/tournament_manager/tests/: utils.py
plugins/tournament_manager/tests/resources/: get_participant.json  get_participants.json  get_tournament.json
plugins/tournament_manager/tests/services/: test_match_service.py  test_tournament_service.py
plugins/tournament_manager/utils/: chunks.py
utils/: parser.py
