[tool.poetry]
name = "ghetto-tournament-bot"
version = "0.1.0"
description = ""
authors = ["Sophie Bernadin-Mercier <sophiebmercier@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
"discord.py" = {git = "https://github.com/Rapptz/discord.py.git"}
errbot = "^6.1"
requests = "^2.22"

[tool.poetry.dev-dependencies]
black = { version = "*", allows-prereleases = true }
flake8 = "^3.7"

[tool.black]
line-length = 90
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.pytest_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
  | venv
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
