[tool.poetry]
name = "tournament-discord-bot"
version = "0.1.0"
description = ""
authors = ["Sophie Bernadin-Mercier <sophiebmercier@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
errbot = "^6.1"
requests = "^2.22"
"discord.py" = "^1.5.1"

[tool.poetry.dev-dependencies]
black = { version = "*", allow-prereleases = true }
flake8 = "^3.7"

[tool.black]
line-length = 90
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.pytest_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
  | venv
  | data
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
